// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update adds TODO for removed message inputs and drops them: test.html 1`] = `
{
  "0. Before": "
                <tui-input-copy
                    [(ngModel)]="value"
                    successMessage="Copied!"
                    [messageDirection]="direction"
                >
                    Copy value
                </tui-input-copy>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-input-copy migration:
     - successMessage, messageDirection removed in v5. The copy confirmation hint is built into tuiCopy and is no longer configurable.
-->
<tui-textfield
                    
                    
                    
                >
<label tuiLabel>
                    Copy value
                </label>

<input tuiInput [(ngModel)]="value" />
<tui-icon tuiCopy />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputCopyModule to TuiTextfield with tuiCopy: test.html 1`] = `
{
  "0. Before": "
                <tui-input-copy [(ngModel)]="value">Click to copy</tui-input-copy>

                <tui-input-copy formControlName="token">Token</tui-input-copy>
            ",
  "1. After": "
                <tui-textfield >
<label tuiLabel>Click to copy</label>

<input tuiInput [(ngModel)]="value" />
<tui-icon tuiCopy />
</tui-textfield>

                <tui-textfield >
<label tuiLabel>Token</label>

<input tuiInput formControlName="token" />
<tui-icon tuiCopy />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputCopyModule to TuiTextfield with tuiCopy: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputCopyModule} from '@taiga-ui/legacy';

                @Component({
                    standalone: true,
                    imports: [TuiInputCopyModule],
                    templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
  "1. After": "import { TuiCopy } from "@taiga-ui/kit";
import { TuiIcon, TuiInput } from "@taiga-ui/core";

                                @Component({
                    standalone: true,
                    imports: [TuiIcon, TuiCopy, TuiInput],
                    templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
}
`;

exports[`ng-update migrate options tokens to kit: test.ts 1`] = `
{
  "0. Before": "
                import {
                    TUI_INPUT_COPY_OPTIONS,
                    tuiInputCopyOptionsProvider,
                } from '@taiga-ui/legacy';
                import {type TuiInputCopyOptions} from '@taiga-ui/legacy';

                @Component({
                    standalone: true,
                    providers: [tuiInputCopyOptionsProvider({icon: '@tui.copy'})],
                    template: '',
                })
                export class MyComponent {
                    protected readonly options: TuiInputCopyOptions =
                        inject(TUI_INPUT_COPY_OPTIONS);
                }
            ",
  "1. After": "import { TuiCopyOptions, TUI_COPY_OPTIONS, tuiCopyOptionsProvider } from "@taiga-ui/kit";

                @Component({
                    standalone: true,
                    providers: [tuiCopyOptionsProvider({icon: '@tui.copy'})],
                    template: '',
                })
                export class MyComponent {
                    protected readonly options: TuiCopyOptions =
                        inject(TUI_COPY_OPTIONS);
                }
            ",
}
`;

exports[`ng-update migrates a projected <input> inside tui-input-copy: test.html 1`] = `
{
  "0. Before": "
                <tui-input-copy [formControl]="control">
                    Copy me
                    <input
                        tuiTextfieldLegacy
                        placeholder="value"
                    />
                </tui-input-copy>
            ",
  "1. After": "
                <tui-textfield >
<label tuiLabel>
                    Copy me
                    </label>
<input
                        tuiInput [formControl]="control"
                        placeholder="value"
                    />
<tui-icon tuiCopy />

                </tui-textfield>
            ",
}
`;

exports[`ng-update moves static tuiTextfieldLabelOutside label to placeholder: test.html 1`] = `
{
  "0. Before": "
                <tui-input-copy
                    [formControl]="control"
                    [tuiTextfieldLabelOutside]="true"
                >
                    Copy value
                </tui-input-copy>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                >
<input tuiInput [formControl]="control" placeholder="Copy value" />
<tui-icon tuiCopy />
</tui-textfield>
            ",
}
`;
